<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#cccccc"
    tools:context="info.androidhive.materialtabs.fragments.FourFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fmlayout"
        android:layout_margin="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/select"
            android:textStyle="bold"
            android:textSize="17sp"
            android:textColor="@android:color/black"/>
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fm_spinner"
            android:background="@android:color/white" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_below="@+id/fmlayout"
        android:orientation="vertical"
        android:id = "@+id/input_layout">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text = "@string/subjectdistance"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@android:color/black"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dist_et"
                android:background="@android:color/white"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text = "@string/lensfocallength"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@android:color/black"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/flen_et"
                android:background="@android:color/white"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text = "@string/lensaperture"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@android:color/black"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/aperature_et"
                android:background="@android:color/white"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text = "@string/circleofconfusion"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@android:color/black"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/coc_et"
                android:background="@android:color/white"/>
        </LinearLayout>
        <Button
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:id="@+id/four_calcbtn"
            android:textColor = "@android:color/white"
            android:background="@color/orange"
            android:layout_below="@+id/input_layout"
            android:text="@string/calculate_btn"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text = "@string/nearfocus"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@android:color/black"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/near_dist_et"
                android:background="@android:color/white"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text = "@string/farfocus"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@android:color/black"/>
            <EditText
                android:layout_width="match_parent"
                android:id="@+id/far_dist_et"
                android:layout_height="wrap_content"
                android:background="@android:color/white"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text = "@string/depthoffield"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@android:color/black"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/depth_of_field_et"
                android:background="@android:color/white"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text = "@string/depthoffocus"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@android:color/black"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/depth_of_focus_et"
                android:background="@android:color/white"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:text="@string/dslr_hint"/>
    </LinearLayout>
</RelativeLayout>
