<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="#cccccc"
    tools:context="info.androidhive.materialtabs.fragments.TwoFragment">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:layout_margin="10dp"
        android:text = "@string/aspect_hint"
        android:textColor="@android:color/black"
        android:textSize="15sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/aspectratio"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="18sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/aspectwidth"
                android:text="4"
                android:singleLine="true"
                android:maxLines="1"
                android:imeOptions="actionDone"
                android:background="@android:color/white"
                android:layout_marginRight="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/width"
                android:textSize="17sp"
                android:textColor="@android:color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center"
            >
            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/aspectheight"
                android:text="3"
                android:singleLine="true"
                android:maxLines="1"
                android:imeOptions="actionDone"
                android:background="@android:color/white"
                android:layout_marginRight="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height"
                android:textSize="17sp"
                android:textColor="@android:color/black"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/imagesize"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="18sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/imagepixt"
                android:text="800"
                android:singleLine="true"
                android:maxLines="1"
                android:imeOptions="actionDone"
                android:background="@android:color/white"
                android:layout_marginRight="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pixels"
                android:textSize="17sp"
                android:textColor="@android:color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center"
            >
            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/lasteditbox"
                android:text="600"
                android:singleLine="true"
                android:maxLines="1"
                android:imeOptions="actionDone"
                android:background="@android:color/white"
                android:layout_marginRight="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pixels"
                android:textSize="17sp"
                android:textColor="@android:color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lasteditbox"
            android:layout_marginTop="10dp"
            android:gravity="center"
            >
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:id="@+id/calculate_btn"
                android:textColor = "@android:color/white"
                android:background="@color/orange"
                android:text="@string/calculate_btn"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear_btn"
                android:id="@+id/clear_btn"
                android:textColor = "@android:color/white"
                android:background="@color/orange"
                />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
